# qoi

./: pyproject.toml  setup.py
