[build-system]
requires = [
    "setuptools >= 45",
    "wheel >= 0.30.0",
    "setuptools_scm >= 6.2",
    # Copied from https://github.com/scipy/scipy/blob/master/pyproject.toml
    # NOTE: if you update this, you'll need to update install_requires in setup.py
    "Cython>=0.29.21",
    "numpy>=1.24.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/qoi/_version.py"
write_to_template = "__version__ = \"{version}\""

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build = "cp38-* cp39-* cp310-*"
# skip musl and ignore the non-standard linux builds
skip = "*-musllinux_* *s390x* *ppc64le*"
build-frontend = "build"
environment = "USE_CYTHON=1"
build-verbosity = 3
